fix: improve modal styling for better overflow handling and layout

--- a/client/src/components/mainInformation/open_class/open_class.css
+++ b/client/src/components/mainInformation/open_class/open_class.css
@@ -76,3 +76,13 @@
   overflow-y: auto;
   z-index: 1000;
 }
+
+.modal{
+  overflow: hidden !important;
+}
+
+.modal-body {
+  margin: auto !important;
+  max-height: 620px !important;
+  overflow-y: auto;
+}
